--- a/data/.template.yaml
+++ b/data/.template.yaml
@@ -1,6 +1,10 @@
 # vim macro to swap the map:
 # 0wvedwvep0wPj
 
+frontmatter:
+  title: 'DE Staffel 1'
+  weight: 1
+
 tree_gen: false
 
 # rule_set: !SomeoneIsDup
