update submodule to custom book theme

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "gh-pages/themes/hugo-book"]
 	path = gh-pages/themes/hugo-book
-	url = https://github.com/alex-shpak/hugo-book
+	url = https://github.com/atticus-sullivan/hugo-book
+	branch = feat-theme
