--- a/.github/workflows/run-simulation.yml
+++ b/.github/workflows/run-simulation.yml
@@ -332,7 +332,7 @@ jobs:
       - name: Build comparisons
         run: |
           chmod +x ./ayto
-          ./ayto graph -t 0 gh-pages/content/ayto/comparison/de.md gh-pages/content/ayto/comparison/us.md
+          ./ayto graph gh-pages/content/ayto/comparison/de.md gh-pages/content/ayto/comparison/us.md
 
       - name: Build with Hugo
         env:
