disable picture caching

--- a/.github/workflows/run-simulation.yml
+++ b/.github/workflows/run-simulation.yml
@@ -239,16 +239,16 @@ jobs:
         with:
           ref: build
 
-      - run: ls "./data/${{ matrix.sim }}/${{ matrix.sim }}.col.out"
-      - run: echo "${{ hashFiles('./data/${{ matrix.sim }}/${{ matrix.sim }}.col.out') }}"
-
-      - name: Cache generated picture for ${{ matrix.sim }}
-        uses: actions/cache@v3
-        with:
-          path: ./gh-pages/static/${{ matrix.sim }}
-          key: ${{ runner.os }}-generate-pictures-${{ matrix.sim }}-${{ hashFiles('./data/${{ matrix.sim }}/${{ matrix.sim }}.col.out') }}
-          restore-keys: |
-            ${{ runner.os }}-generate-pictures-${{ matrix.sim }}-
+      # - run: ls "./data/${{ matrix.sim }}/${{ matrix.sim }}.col.out"
+      # - run: echo "${{ hashFiles('./data/${{ matrix.sim }}/${{ matrix.sim }}.col.out') }}"
+      #
+      # - name: Cache generated picture for ${{ matrix.sim }}
+      #   uses: actions/cache@v3
+      #   with:
+      #     path: ./gh-pages/static/${{ matrix.sim }}
+      #     key: ${{ runner.os }}-generate-pictures-${{ matrix.sim }}-${{ hashFiles('./data/${{ matrix.sim }}/${{ matrix.sim }}.col.out') }}
+      #     restore-keys: |
+      #       ${{ runner.os }}-generate-pictures-${{ matrix.sim }}-
 
       - name: Install dependencies for building assets
         run: |
