--- a/gh-pages/hugo.yaml
+++ b/gh-pages/hugo.yaml
@@ -19,6 +19,18 @@ markup:
   goldmark:
     renderer:
       unsafe: true
+    extensions:
+      passthrough:
+        delimiters:
+          block:
+          - - \[
+            - \]
+          - - $$
+            - $$
+          inline:
+          - - \(
+            - \)
+        enable: true
 
 defaultContentLanguage: de
 defaultContentLanguageInSubdir: false
