set the title for all pages nonetheless

--- a/data/us05/us05.yaml
+++ b/data/us05/us05.yaml
@@ -2,7 +2,8 @@
 # 0wvedwvep0wPj
 
 frontmatter:
-  title: 'US Staffel 5'
+  name: US Staffel 5
+  identifier: us-season5
   weight: 1
 
 tree_gen: true
