--- a/data/de06/de06.yaml
+++ b/data/de06/de06.yaml
@@ -6,8 +6,6 @@ frontmatter:
   identifier: de-season6
   weight: 1
 
-tree_gen: true
-
 rule_set: !SomeoneIsDup
 # rule_set: !FixedDup Tori
 # rule_set: !Eq
@@ -165,6 +163,7 @@ constraints:
 
   - type: !Night {num: 6, comment: "E14"}
     check: !Lights [5]
+    buildTree: true
     # resultUnknown: true
     # noExclude: true
     map:
