--- a/data/de06/de06.yaml
+++ b/data/de06/de06.yaml
@@ -164,6 +164,7 @@ constraints:
   - type: !Night {num: 6, comment: "E14"}
     check: !Lights [5]
     buildTree: true
+    # noExclude: true
     map:
       Danish: Nadja
       Dino: Deisy
